--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-sstreamlit==1.36.0
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.9.1
+streamlit==1.39.0
+numpy==2.1.2
+pandas==2.3.0
+matplotlib==3.9.2
+
+seaborn==0.13.2
+plotly==5.24.1
+
 
